--- a/SisMaper/Views/MainWindow.xaml
+++ b/SisMaper/Views/MainWindow.xaml
@@ -537,20 +537,27 @@
                     </TabItem>
                     <TabItem
                         x:Name="Usuários"
+                        Visibility="{Binding PAdmin, Mode=OneWay, Converter={StaticResource boolToVisibilityConverter}}"
                         Style="{DynamicResource SisMaper.MainWindow.TabItem.SubMenu}">
-                        <TabItem.Header>
+                        <TabItem.HeaderTemplate>
+                            <ItemContainerTemplate>
                                 <StackPanel
                                     Orientation="Vertical"
                                     VerticalAlignment="Center">
                                     <icons:PackIconMaterial
                                         Style="{DynamicResource MainWindow.Menu.PackIconMaterial}"
-                                        Kind="AccountLock" />
+                                        Kind="Account" />
                                     <TextBlock
                                         Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
                                         Text="{Binding Name, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type TabItem}}}" />
                                 </StackPanel>
-                        </TabItem.Header>
-                        <Grid />
+                            </ItemContainerTemplate>
+                        </TabItem.HeaderTemplate>
+                        <local:ViewUsuarios
+                            Width="auto"
+                            Height="auto"
+                            HorizontalAlignment="Stretch"
+                            VerticalAlignment="Stretch" />
                     </TabItem>
                 </TabControl>
             </TabItem>
