--- a/SisMaper/Views/ViewFatura.xaml
+++ b/SisMaper/Views/ViewFatura.xaml
@@ -232,6 +232,7 @@
                         AutoGenerateColumns="False"
                         ItemsSource="{Binding Fatura.Parcelas}"
                         SelectedItem="{Binding ParcelaSelecionada}"
+                        SelectionMode="Single"
                         CanUserAddRows="False"
                         Height="auto"
                         Width="auto"
@@ -308,6 +309,15 @@
                         VerticalAlignment="Top"
                         Margin="172,10,0,0" 
                         Command="{Binding ExcluirParcelaCmd}"/>
+
+                    <Button
+                        Style="{DynamicResource OptionsButtonStyle}"
+                        Content="Gerar Parcelas"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Top"
+                        Margin="0,10,10,0"
+                        Command="{Binding GerarParcelasCmd}">
+                    </Button>
 
                 </Grid>
             </TabItem>
